# armenia_outages

./: .gitignore  .python-version  Dockerfile  Procfile  README.md  alembic.ini  bot.py  clear_db.py  compile_translations.sh  config.py  db.py  deploy.sh  docker-compose.yml  handle_events.py  handle_messages.py  handle_posts.py  handlers.py  models.py  orm.py  parser.py  requirements.txt  send_posts.py  setup.cfg  setup.sh  setup_and_run.sh  tasks.py  update_translations.sh  user_logic.py  utils.py  worker.py
.devcontainer/: devcontainer.json
action_handlers/: handlers.py  subscribe_handler.py  subscribe_handlers.py
alembic/: env.py
alembic/versions/: 051b156c09fa_add_sent_field_to_agg_table.py  079e0290600f_add_aggregatedevent_table.py  2b8360fec3ec_update_eventtype_enum_and_migrate_data.py  2de134b10f42_add_cascade_deleting.py  31d0052f2767_add_unique_constraint_to_subscriptions.py  35fbc3613ec1_create_notification.py  378b2c70cc5f_initial.py  4150d14ee39f_rework_model_fields.py  4421cdd56c6a_add_text_field_to_event_model.py  44f7699e3008_add_event_type_to_processedevents_and_.py  56258b59e590_add_planned_field_to_processed_events_.py  5c08cb2c4485_initial_migration.py  6cbfba7bcbff_link_subscription_and_botuser.py  76c4237dd5e3_migrate_to_asyncpg.py  77365e983e7c_add_date_column_to_events_table.py  (+19 more)
notifications/: notification_handlers.py
parsers/: power_parser.py  water_parser.py  webdriver_utils.py
post_handlers/: emergency_power.py  planned_power.py  water.py
tests/: conftest.py  test_bot.py  test_handle_posts.py  test_power_parser.py
(+4 files in other folders)
