[flake8]
ignore = E203
max-line-length = 120

[black]
line-length = 120

[metadata]
name = Armenia Outages
version = 1.0
author = Irina Silvestrova
author_email = silvestrova.i.a@gmail.com
description = Translations for Armenia Outages project.
license = License :: OSI Approved :: MIT License
long_description = file: README.md

[options]
packages = find:

[options.entry_points]
babel.extractors =
    python = babel.extractors:extract_python

[aliases]
compile_catalog = update
